--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,13 @@
         android:layout_height="match_parent">
 
 <!--        FrameLayout-->
+<!--        <androidx.fragment.app.FragmentContainerView-->
+<!--            xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--            xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--            android:id="@+id/fragment_container_view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
+<!--        </androidx.fragment.app.FragmentContainerView>-->
         <fragment
             android:id="@+id/nav_host_fragment_activity_main"
             android:name="androidx.navigation.fragment.NavHostFragment"
@@ -49,40 +56,45 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/mobile_navigation" />
 
+        <!--            app:navigationIcon="@drawable/ic_baseline_menu_24"-->
+
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
             style="@style/Widget.MaterialComponents.BottomAppBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            app:fabAlignmentMode="center"
             app:fabCradleMargin="10dp"
             app:fabCradleRoundedCornerRadius="10dp"
-            app:fabCradleVerticalOffset="10dp"
-            app:fabAlignmentMode="center"
-            >
-<!--            app:menu="@menu/bottom_app_bar_menu"-->
+            app:fabCradleVerticalOffset="10dp">
+            <!--            app:menu="@menu/bottom_app_bar_menu"-->
 
-                <com.google.android.material.bottomnavigation.BottomNavigationView
-                    android:id="@+id/nav_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="16dp"
-                    android:background="@drawable/transparent_background"
-                    app:menu="@menu/bottom_nav_menu"
-                    />
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/nav_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/transparent_background"
+                app:menu="@menu/bottom_nav_menu" />
 
         </com.google.android.material.bottomappbar.BottomAppBar>
-<!--            app:navigationIcon="@drawable/ic_baseline_menu_24"-->
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             style="style=”@style/Widget.MaterialComponents.BottomAppBar”"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_add_24"
-            app:layout_anchor="@id/bottom_app_bar"
             android:onClick="createNewEntry"
-            />
+            android:src="@drawable/ic_baseline_add_24"
+            app:layout_anchor="@id/bottom_app_bar" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button"
+            android:onClick="closeNewEntry"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
