--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:paddingTop="?attr/actionBarSize"
     >
+<!--    android:paddingTop="?attr/actionBarSize"-->
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
-<!--        FrameLayout-->
+<!--        FrameLayout ODER fragment-->
 <!--        <androidx.fragment.app.FragmentContainerView-->
 <!--            xmlns:android="http://schemas.android.com/apk/res/android"-->
 <!--            xmlns:app="http://schemas.android.com/apk/res-auto"-->
@@ -33,7 +34,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/mobile_navigation"
-
             />
 
         <!--            app:navigationIcon="@drawable/ic_baseline_menu_24"-->
@@ -47,7 +47,8 @@
             app:fabAlignmentMode="center"
             app:fabCradleMargin="10dp"
             app:fabCradleRoundedCornerRadius="10dp"
-            app:fabCradleVerticalOffset="10dp">
+            app:fabCradleVerticalOffset="10dp"
+            >
             <!--            app:menu="@menu/bottom_app_bar_menu"-->
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -67,14 +68,8 @@
             android:layout_height="wrap_content"
             android:onClick="createNewEntry"
             android:src="@drawable/ic_baseline_add_24"
-            app:layout_anchor="@id/bottom_app_bar" />
-
-        <Button
-            android:id="@+id/closeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="closeNewEntry"
-            android:text="close" />
+            app:layout_anchor="@id/bottom_app_bar"
+            />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
