--- a/app/src/main/res/layout/fragment_new_entry.xml
+++ b/app/src/main/res/layout/fragment_new_entry.xml
@@ -35,26 +35,41 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
+            android:id="@+id/editTextTextPersonName"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cameraButton" />
+
+        <EditText
+            android:id="@+id/editTextTextMultiLine"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
+            android:ems="10"
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cameraButton">
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/dishNameInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Gerichtname" />
+        <ImageView
+            android:id="@+id/mealImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="72dp"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
+            tools:layout_editor_absoluteX="0dp"
+            tools:src="@tools:sample/backgrounds/scenic" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/additionalInfoInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="additional Info" />
-        </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
 
