--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,5 +8,6 @@
         <item name="color">@color/black</item>
         <item name="backgroundColor">@color/purple_200</item>
     </style>
+<!--    <style name="AppTheme" parent="ChatSDKTheme">-->
 
 </resources>
