--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,4 +12,19 @@
         android:layout_height="match_parent"
         android:padding="4dp"
         android:clipToPadding="false"/>
+
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="right"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="100dp"
+        android:background="@color/cardview_light_background"
+        app:layout_constraintEnd_toEndOf="@+id/card_stack_view">
+        <TextView
+            android:id="@+id/TestText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"/>
+    </androidx.drawerlayout.widget.DrawerLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
