--- a/app/src/main/res/layout/filter_view.xml
+++ b/app/src/main/res/layout/filter_view.xml
@@ -37,15 +37,22 @@
         app:trackHeight="25dp" />
 
     <com.google.android.material.button.MaterialButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:checkable="true"
-        app:cornerRadius="40dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        android:insetLeft="0dp"
+        android:padding="0dp"
+        app:iconPadding="0dp"
         app:icon="@drawable/leaf"
         app:backgroundTint="@drawable/btn_toggle_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slider" />
+        app:layout_constraintTop_toBottomOf="@+id/slider"
+        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
