--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,5 +21,5 @@
             android:padding="4dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <include layout="@layout/filter_view"/>
+    <include layout="@layout/filter_view" android:id="@+id/filter_view"/>
 </androidx.drawerlayout.widget.DrawerLayout>
