--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparentTest">#7F000000</color>
+    <color name="transparent_background">#00000000</color>
+    <color name="dark_grey">#808080</color>
+    <color name="gainsboro">#dcdcdc</color>
 </resources>
