--- a/app/src/main/res/layout/filter_view.xml
+++ b/app/src/main/res/layout/filter_view.xml
@@ -31,6 +31,7 @@
         android:stepSize="1"
         android:valueFrom="0"
         android:valueTo="40"
+        android:value="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TestText"
