--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -13,12 +13,38 @@
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
 
+
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_gchannel"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:theme="@style/Widget.AppCompat.Toolbar"
+            app:titleTextColor="@color/white"
             app:popupTheme="@style/Theme.AppCompat.Light">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/backButton"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                app:icon="@drawable/ic_baseline_arrow_back_24"
+                style="?android:attr/borderlessButtonStyle"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
+                >
+
+            </com.google.android.material.button.MaterialButton>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Roman"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:gravity="center"
+                >
+
+            </TextView>
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
@@ -69,14 +95,14 @@
             android:maxLines="6"
             tools:ignore="Autofill" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_gchat_send"
             android:layout_width="64dp"
             android:layout_height="48dp"
             android:layout_alignParentEnd="true"
             android:background="?attr/selectableItemBackground"
-            android:text="Send"
-            android:textColor="@color/purple_500" />
+            app:icon="@drawable/ic_baseline_send_24"
+            app:iconTint="@color/purple_500" />
 
     </RelativeLayout>
 
