--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="grey">#CFCFCF</color>
     <color name="active_green">#79ED83</color>
     <color name="transparentTest">#7F000000</color>
+    <color name="error_red">#920000</color>
 </resources>
