--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="active_green">#79ED83</color>
     <color name="transparentTest">#7F000000</color>
     <color name="error_red">#920000</color>
+    <color name="transparent_bg">#00000000</color>
 </resources>
